Should have actually now fixed the spacing of the website on screens under 850px due to padding on a section, also centered the about me title better with the text

--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ header li {
     padding-right: 30px;
 }
 
+.about_content h2 {
+    position: relative;
+    right: 5%;
+}
+
 .about_content p {
     width: 90%;
     line-height: 1.5rem;
@@ -313,6 +318,10 @@ header li {
 
     .about_content {
         width: 100%;
+    }
+
+    .about_content h2 {
+        right: 0px;
     }
 
     .about_content p {
